--- a/templates/register.html
+++ b/templates/register.html
@@ -8,13 +8,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Register Page </h1>
+    <h1> Registro de Usuarios </h1>
     <form action="/register_user" method="post">
-        <label> Id </label> <input type="number" name="id"> <br> <br>
-        <label> Name </label> <input type="text" name="name"> <br> <br>
-        <label> Lastname </label> <input type="text" name="lastname"> <br> <br>
-        <label> Birthday </label> <input type="date" name="birthday"> <br> <br>
-        <button> Register </button> 
+        <label> Identificacion </label> <input type="number" name="id"> <br> <br>
+        <label> Nombre </label> <input type="text" name="name"> <br> <br>
+        <label> Apellido </label> <input type="text" name="lastname"> <br> <br>
+        <label> Cumpleaños </label> <input type="date" name="birthday"> <br> <br>
+        <button> Guardar </button> 
     </form>        
 </body>
 </html>
